fix:  menu header overflow and contact form validation

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -47,6 +47,7 @@
     border-style: none;
     border-radius: 8px;
     transition: all 0.3s;
+    resize: none;
 
 
     &:hover{
